visual_datapath.css: Fix popup text if it is too long

--- a/static/styles/visual_datapath.css
+++ b/static/styles/visual_datapath.css
@@ -44,6 +44,7 @@
 
 #popup .data .code {
   font-family: 'Iosevka', 'Fira Code', monospace;
+  overflow-wrap: anywhere;
 }
 
 #popup .data .meaning::before {
